# pytonmind

./: .gitignore  README.md  pyproject.toml
src/pytonmind/: __init__.py  client.py  sip.py
tests/: test_fixture_replay.py  test_pytonmind.py
tests/fixtures/: README.md  overview_get.json  sip_get.json
